--- a/core/locales/en-GB.json
+++ b/core/locales/en-GB.json
@@ -25,5 +25,11 @@
     "settings.autoRoleEnabled": "Auto-role on/off",
     "settings.welcomeChannel": "Welcome channel",
     "settings.welcomeMessage": "Welcome message",
-    "settings.welcomeEnabled": "Welcome on/off"
+    "settings.welcomeEnabled": "Welcome on/off",
+
+    "weather.noLocation": "Please provide a location to look up weather info for.",
+    "weather.example": "E.g. `%cmd% London`",
+    "weather.404.error": "An error occurred: `%err%`.",
+    "weather.404.valid": "Please ensure you've provided a valid city name.",
+    "weather.404.help": "Use `%cmd%` for further information."
 }
