--- a/core/locales/en-GB.json
+++ b/core/locales/en-GB.json
@@ -12,6 +12,8 @@
 
     "help.prefix": "My prefix on this server is:",
     "help.dmConfirm": "Help is on its way!",
+    "help.dmError": "Looks like I can't DM you, %user%.",
+    "help.dmErrorInfo": "Please ensure your privacy settings on this server allow me to do so.",
 
     "trivia.dmlb": "Leaderboard is unavailable in DMs.",
     "trivia.categories": "Available categories",
