--- a/core/locales/en-GB.json
+++ b/core/locales/en-GB.json
@@ -15,6 +15,9 @@
     "help.dmError": "Looks like I can't DM you, %user%.",
     "help.dmErrorInfo": "Please ensure your privacy settings on this server allow me to do so.",
 
+    "level.lvl": "your permission level is: %lvl%.",
+    "level.info": "Use %cmd% to see a list of commands available to your level.",
+
     "trivia.dmlb": "Leaderboard is unavailable in DMs.",
     "trivia.categories": "Available categories",
     "trivia.points": "you currently have `%num%` trivia points.",
