Handle invalid GuildMember username (avatar cmd)

--- a/core/locales/en-GB.json
+++ b/core/locales/en-GB.json
@@ -9,6 +9,7 @@
 
     "avatar.user": "%user%'s avatar",
     "avatar.url": "Direct URL",
+    "avatar.user.invalid": "A user with that name could not be found on this server.",
 
     "help.prefix": "My prefix on this server is:",
     "help.dmConfirm": "Help is on its way!",
