--- a/core/locales/en-GB.json
+++ b/core/locales/en-GB.json
@@ -11,6 +11,11 @@
     "avatar.url": "Direct URL",
     "avatar.user.invalid": "A user with that name could not be found on this server.",
 
+    "user.status.online": "online",
+    "user.status.idle": "idle",
+    "user.status.dnd": "do not disturb",
+    "user.status.offline": "offline",
+
     "help.prefix": "My prefix on this server is:",
     "help.dmConfirm": "Help is on its way!",
     "help.dmError": "Looks like I can't DM you, %user%.",
