--- a/core/locales/en-GB.json
+++ b/core/locales/en-GB.json
@@ -4,6 +4,7 @@
     "error": "An error occurred.",
     "points": "points",
     "latency": "latency",
+    "utc": "all times are UTC",
 
     "dm.unavailable": "This command is unavailable in DMs.",
 
@@ -15,6 +16,11 @@
     "user.status.idle": "idle",
     "user.status.dnd": "do not disturb",
     "user.status.offline": "offline",
+    "user.created": "Account created",
+    "user.joined": "Joined this server",
+    "user.roles": "Roles",
+    "user.time.at": "at",
+    "user.id": "User ID",
 
     "help.prefix": "My prefix on this server is:",
     "help.dmConfirm": "Help is on its way!",
