--- a/core/locales/en-GB.json
+++ b/core/locales/en-GB.json
@@ -28,6 +28,13 @@
     "user.time.at": "at",
     "user.id": "User ID",
 
+    "server.verif.none": "none",
+    "server.verif.low": "low",
+    "server.verif.medium": "medium",
+    "server.cFilter.disabled": "disabled",
+    "server.cFilter.noRole": "scan content from members without a role",
+    "server.cFilter.all": "scan content from all members",
+
     "help.prefix": "My prefix on this server is:",
     "help.dmConfirm": "Help is on its way!",
     "help.dmError": "Looks like I can't DM you, %user%.",
