Localise Spotify (info) command

--- a/core/locales/en-GB.json
+++ b/core/locales/en-GB.json
@@ -96,6 +96,19 @@
     "settings.welcomeMessage": "Welcome message",
     "settings.welcomeEnabled": "Welcome on/off",
 
+    "spotify.notListening": "Not listening to a song",
+    "spotify.notListening.info": "Please ensure you're listening to a song (on a Spotify account that's connected to Discord).",
+    "spotify.trackTitle": "%song% by %artists%",
+    "spotify.play": "Play on Spotify",
+    "spotify.key": "Key",
+    "spotify.timeSignature": "Time signature",
+    "spotify.tempo": "Tempo",
+    "spotify.tempo.value": "**%num%** BPM",
+    "spotify.danceability": "Danceability",
+    "spotify.energy": "Energy",
+    "spotify.acousticness": "Acousticness",
+    "spotify.releaseDate": "Released on %date%",
+
     "weather.noLocation": "Please provide a location to look up weather info for.",
     "weather.example": "E.g. `%cmd% London`",
     "weather.404.error": "An error occurred: `%err%`.",
