Create points command

--- a/core/locales/en-GB.json
+++ b/core/locales/en-GB.json
@@ -57,6 +57,9 @@
     "level.lvl": "your permission level is: %lvl%.",
     "level.info": "Use %cmd% to see a list of commands available to your level.",
 
+    "points.lb.header": "**Points Leaderboard** for %name%",
+    "points.points": "you currently have `%num%` points.",
+
     "trivia.dmlb": "Leaderboard is unavailable in DMs.",
     "trivia.categories": "Available categories",
     "trivia.points": "you currently have `%num%` trivia points.",
