Create weather forecast command

--- a/core/locales/en-GB.json
+++ b/core/locales/en-GB.json
@@ -144,6 +144,9 @@
     "spotify.acousticness": "Acousticness",
     "spotify.releaseDate": "Released on %date%",
 
+    "forecast.noLocation": "Please provide a location to look up the weather forecast for.",
+    "forecast.example": "E.g. `%cmd% London`",
+
     "weather.noLocation": "Please provide a location to look up weather info for.",
     "weather.example": "E.g. `%cmd% London`",
     "weather.404.error": "An error occurred: `%err%`.",
