Mod-log settings cmd: ability to change modLogData

--- a/core/locales/en-GB.json
+++ b/core/locales/en-GB.json
@@ -1,6 +1,7 @@
 {
     "channel": "channel",
     "on_off": "on/off",
+    "data": "data",
     "error": "An error occurred.",
     "point": "point",
     "points": "points",
@@ -150,6 +151,8 @@
     "settings.pointsCooldown": "Points system cooldown",
     "settings.nickRequestChannel": "Nick request channel",
     "settings.nickRequestEnabled": "Nick request system on/off",
+    "settings.invalidModLogData": "Invalid mod-log data type(s) provided",
+    "settings.invalidModLogData.info": "The valid data types are: %types%.",
 
     "spotify.notListening": "Not listening to a song",
     "spotify.notListening.info": "Please ensure you're listening to a song (on a Spotify account that's connected to Discord).",
