--- a/core/locales/en-GB.json
+++ b/core/locales/en-GB.json
@@ -207,5 +207,6 @@
     "yt.search.results": "YouTube search results",
     "yt.search.number": "Reply with a number (%range%) to select a video...",
     "yt.cancel": "Ended the video selection procedure.",
-    "yt.vid": "Here's the video you requested, %user%:"
+    "yt.vid": "Here's the video you requested, %user%:",
+    "yt.noResults": "No results found."
 }
