Replace moment with luxon and use Discord timestamp formatting where appropriate

--- a/core/locales/en-GB.json
+++ b/core/locales/en-GB.json
@@ -56,7 +56,7 @@
     "mod.embed.action": "Action: %act%",
     "mod.embed.member": "Member: %user%",
     "mod.embed.userID": "User ID: %id%",
-    "mod.embed.duration": "Duration: %dur%",
+    "mod.embed.duration": "Expires: %dur%",
     "mod.embed.reason": "Reason: %rsn%",
     "mod.embed.issued": "Issued by %user%",
     "mod.embed.case": "Case %num%",
