--- a/core/locales/en-GB.json
+++ b/core/locales/en-GB.json
@@ -10,6 +10,10 @@
     "details": "Use `%cmd%` for further details.",
     "ban.noun": "Ban",
     "unban.noun": "Unban",
+    
+    "general.error.word": "Error",
+    "general.cancelled": "Operation cancelled",
+    "general.btn.cancel": "Cancel",
 
     "dm.unavailable": "This command is unavailable in DMs.",
 
@@ -60,6 +64,13 @@
     "mod.embed.reason": "Reason: %rsn%",
     "mod.embed.issued": "Issued by %user%",
     "mod.embed.case": "Case %num%",
+
+    "mod.purge.amountTooLow": "amount must be at least 1",
+    "mod.purge.warning.header": "Proceed with caution",
+    "mod.purge.warning.text": "Are you sure you want to delete %num% messages in %channel%? This action is **__irreversible__** and **__cannot__** be undone!",
+    "mod.purge.deleting": "Deleting %num% messages...",
+    "mod.purge.success": "Successfully deleted %num% messages in %channel%",
+    "mod.purge.btn.delete": "Delete %num% messages",
 
     "user.status.online": "online",
     "user.status.idle": "idle",
